First rest controller

--- a/Site Web/index.html
+++ b/Site Web/index.html
@@ -93,7 +93,7 @@
         </nav>
       </div>
       <div class="logo">
-        <a class="logo1" href="index.html"><img src="/images/logo trv.png"/></a>
+        <a class="logo1" href="index.html"><img src="images/logo_trv.png"/></a>
         
        
       </div>
