--- a/Site Web/temperature.html
+++ b/Site Web/temperature.html
@@ -20,6 +20,8 @@
     <!-- CSS-->
     <link href="styles.css" rel="stylesheet">
     <!--Script JS-->
+    <script src="script.js"></script>
+
 </head>
 
 <body>
@@ -103,7 +105,7 @@
 <div id="container"></div>
 
 <div>
-  <canvas id="myChart"></canvas>
+  <canvas id="myChart" width="400" height="400"></canvas>
 </div>
 
 
@@ -125,7 +127,7 @@ fetch('http://localhost:8080/api/temps')
 //aze.push(r.tempInt);
 //aze.push(r.tempCave);
 //aze.push(r.dateServer);
-alert(commits.tempCave);
+//alert(commits.tempCave);
 //}
 })
 
