--- a/Site Web/temperature.html
+++ b/Site Web/temperature.html
@@ -119,7 +119,7 @@
 
 
 
-<script>
+<!--<script>
     const container = document.getElementById("container")
 
 
@@ -144,7 +144,7 @@
 
             container.innerHTML = str;
         })
-</script>
+</script>-->
   
 </body>
 </html>
