--- a/Site Web/temperature.html
+++ b/Site Web/temperature.html
@@ -104,48 +104,33 @@
   </div>
 
 </header>
-    <h1>Bienvenu</h1>
+    <h1>Température des dernières 24 heures</h1>
 
 
 
 
 
 <div class="chartContainer">
-  <canvas id="myChart" ></canvas>
+  <canvas id="myChartTemp" ></canvas>
 </div>
 
 
-<div id="container"></div>
-
-
-
-<!--<script>
-    const container = document.getElementById("container")
-
-
-    fetch("http://localhost:8080/api/temps")
-        .then(res => res.json())
-        .then(temps => {
-            let str = "<section>";
-
-            for (let t of temps){
-                str += `
-				<article>
-					<h4>${t.tempCave}</h4>
-					<h4>${t.tempExt}</h4>
-					<h4>${t.tempInt}</h4>
-					<h4>${t.dateServer}</h4>
-					
-				</article>
-			`
-            }
-
-            str += "</section>";
-
-            container.innerHTML = str;
-        })
-</script>-->
+<div id="container">
+  <button onClick="datePickerZero()">Last 24</button>
   
+  <label>
+    Sélectionnr une date:
+    <input id="getPickerDate" 
+    type="date" 
+    name="oneDate"
+    min="2022-10-19" />
+  </label>
+  
+  <script>
+  
+  </script>
+</div>
+
 </body>
 </html>
 
