--- a/Site_Web/contact.html
+++ b/Site_Web/contact.html
@@ -67,25 +67,25 @@
 
       <form >
         <div class="dropdown">
-          <button id="en-cours" type="button" class="  dropdown-toggle" data-bs-toggle="dropdown">
+          <button type="button" class="  dropdown-toggle" data-bs-toggle="dropdown">
             Matériel d'acquisition<br>de données
           </button>
           <ul class="dropdown-menu">
             <li><div class="container mt-3">
             </div>
             </li>
-            <li><a class="dropdown-item" href="#"><strong>Module ESP8266</strong></a></li>
-            <li><a class="dropdown-item" href="#"><strong>BME280</strong></a></li>
-            <li><a class="dropdown-item" href="#"><strong>DHT11</strong></a></li>
-            <li><a class="dropdown-item" href="#"><strong>SHT31</strong></a></li>
+            <li><a class="dropdown-item" href="mareriel.html"><strong>Module ESP8266</strong></a></li>
+            <li><a class="dropdown-item" href="mareriel.html"><strong>BME280</strong></a></li>
+            <li><a class="dropdown-item" href="mareriel.html"><strong>DHT11</strong></a></li>
+            <li><a class="dropdown-item" href="mareriel.html"><strong>SHT31</strong></a></li>
           </ul>
         </div>
       </form>
   
       <form>
         <div class=" first btn_contact">
-          <a href="contact.html">
-          <button class=" " type="button">Contact</button>
+          <a href="http://85.168.31.223:8080/admin/">
+          <button class=" " type="button">Admin</button>
         </a>
         </div>
       </form>
