--- a/Site_Web/humidite.html
+++ b/Site_Web/humidite.html
@@ -88,8 +88,8 @@
   
       <form>
         <div class=" first btn_contact">
-          <a href="contact.html">
-          <button class=" " type="button">Contact</button>
+          <a href="http://85.168.31.223:8080/admin/">
+          <button class=" " type="button">Admin</button>
         </a>
         </div>
       </form>
@@ -107,11 +107,11 @@
 
 
 <div class="chartContainer">
-  <canvas id="myChartHumid" ></canvas>
+  <canvas id="myChartTemp" ></canvas>
 </div>
+
 <div id="container">
-  <button onClick="datePickerZero()">Last 24</button>
-  
+  <button id="btLast24">Last 24</button>
   <label>
     Sélectionnr une date:
     <input id="getPickerDate" 
@@ -119,10 +119,6 @@
     name="oneDate"
     min="2022-10-19" />
   </label>
-  
-  <script>
-  
-  </script>
 </div>
   
 </body>
