--- a/Site_Web/index.html
+++ b/Site_Web/index.html
@@ -74,10 +74,10 @@
                 <li><div class="container mt-3">
                 </div>
                 </li>
-                <li><a class="dropdown-item" href="materiel.html"><strong>Module ESP8266</strong></a></li>
-                <li><a class="dropdown-item" href="materiel.html"><strong>BME280</strong></a></li>
-                <li><a class="dropdown-item" href="materiel.html"><strong>DHT11</strong></a></li>
-                <li><a class="dropdown-item" href="materiel.html"><strong>SHT31</strong></a></li>
+                <li><a class="dropdown-item" href="https://fr.wikipedia.org/wiki/ESP8266"><strong>Module ESP8266</strong></a></li>
+            <li><a class="dropdown-item" href="https://www.raspberryme.com/guide-du-capteur-bme280-avec-arduino-pression-temperature-humidite/"><strong>BME280</strong></a></li>
+            <li><a class="dropdown-item" href="https://www.carnetdumaker.net/articles/utiliser-un-capteur-de-temperature-et-dhumidite-dht11-dht22-avec-une-carte-arduino-genuino/"><strong>DHT11</strong></a></li>
+            <li><a class="dropdown-item" href="https://wiki.seeedstudio.com/Grove-TempAndHumi_Sensor-SHT31/"><strong>SHT31</strong></a></li>
               </ul>
             </div>
           </form>
