--- a/Site_Web/contact.html
+++ b/Site_Web/contact.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Contact</title>
     <!-- Bootstrap5-->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css">
     <link href="bootstrap-5.0.2-dist/css/bootstrap.css" rel="stylesheet">
@@ -23,7 +23,7 @@
 </head>
 
 <body>
-  <header>
+  <div class="container">
     <!--Menu-->
 <div class="azer">
     <nav class="navbar navbar-expand-sm ">
@@ -74,10 +74,10 @@
             <li><div class="container mt-3">
             </div>
             </li>
-            <li><a class="dropdown-item" href="https://fr.wikipedia.org/wiki/ESP8266"><strong>Module ESP8266</strong></a></li>
-            <li><a class="dropdown-item" href="https://www.raspberryme.com/guide-du-capteur-bme280-avec-arduino-pression-temperature-humidite/"><strong>BME280</strong></a></li>
-            <li><a class="dropdown-item" href="https://www.carnetdumaker.net/articles/utiliser-un-capteur-de-temperature-et-dhumidite-dht11-dht22-avec-une-carte-arduino-genuino/"><strong>DHT11</strong></a></li>
-            <li><a class="dropdown-item" href="https://wiki.seeedstudio.com/Grove-TempAndHumi_Sensor-SHT31/"><strong>SHT31</strong></a></li>
+            <li><a class="dropdown-item" href="http://tvaira.free.fr/esp8266/nodemcu-lolin-esp8266.html" onclick="return ConfirmMessage();" target="_blank"><strong>Module NodeMCU  ESP8266</strong></a></li>
+            <li><a class="dropdown-item" href="https://www.raspberryme.com/guide-du-capteur-bme280-avec-arduino-pression-temperature-humidite/" onclick="return ConfirmMessage();" target="_blank"><strong>BME280</strong></a></li>
+            <li><a class="dropdown-item" href="https://www.carnetdumaker.net/articles/utiliser-un-capteur-de-temperature-et-dhumidite-dht11-dht22-avec-une-carte-arduino-genuino/ onclick="return ConfirmMessage();" target="_blank""><strong>DHT11</strong></a></li>
+            <li><a class="dropdown-item" href="https://wiki.seeedstudio.com/Grove-TempAndHumi_Sensor-SHT31/" onclick="return ConfirmMessage();" target="_blank"><strong>SHT31</strong></a></li>
           </ul>
         </div>
       </form>
@@ -100,7 +100,7 @@
 
 </header>
     
-  
+</div>
 </body>
 </html>
 
