Approfondissement de la sécurité

--- a/Site_Web/humidite.html
+++ b/Site_Web/humidite.html
@@ -27,6 +27,7 @@
 </head>
 
 <body>
+  <div id="decalHeader"> </div>
   <div class="container">
   <header>
     <!--Menu-->
@@ -104,7 +105,7 @@
   </div>
 
 </header>
-<h1>Humidité des dernières 24 heures</h1>
+<h1>Humidité <span id="changeH1">des dernières 24 heures</span></h1>
 
 
 <div class="chartContainer">
