--- a/Site_Web/index.html
+++ b/Site_Web/index.html
@@ -23,6 +23,7 @@
 </head>
 
 <body>
+  <div id="decalHeader"> </div>
   <div class="container">
     <header>
         <!--Menu-->
@@ -110,7 +111,7 @@
     <li> Analyse, traitement et nettoyage ds données</li>
     <li> Visualisation des données par le biais de dashboard automatisé</li>
   </ol></div></div>
-  <p><h3>Code consultable a l'adresse suivante:<br>
+  <p><h3 id="sousTitre2">Code consultable à l'adresse suivante:<br>
     <a href="https://github.com/Treza88/Projet_Data_Capteur_THP">
       https://github.com/Treza88/Projet_Data_Capteur_THP</h3>
     </a>
