--- a/Site_Web/temperature.html
+++ b/Site_Web/temperature.html
@@ -27,7 +27,8 @@
     
 </head>
 
-<body>
+<body id="fond">
+  <div id="decalHeader"> </div>
   <div class="container">
   <header>
     <!--Menu-->
@@ -103,7 +104,7 @@
   </div>
 
 </header>
-    <h1>Température des dernières 24 heures</h1>
+    <h1>Température <span id="changeH1">des dernières 24 heures</span></h1>
 
 
 
